fix: double scrollbar + add more items in shop

--- a/starshop/src/app/globals.css
+++ b/starshop/src/app/globals.css
@@ -11,7 +11,6 @@
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
   color: #333;
   font-family: 'SoDoSans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-style: normal;
